# wavvault

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/browse/: page.tsx
app/cart/: page.tsx
app/categories/: page.tsx
app/checkout/: page.tsx
app/contact/: page.tsx
app/dashboard/: page.tsx
app/product/[id]/: page.tsx
app/success/: page.tsx
components/: AudioPlayer.tsx  Footer.tsx  Header.tsx  ProductCard.tsx
src/wavvault/: __init__.py  cli.py  models.py  storage.py
store/: cartStore.ts
tests/: conftest.py  test_storage.py
