[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wavvault"
version = "0.1.0"
description = "Command-line vault for managing references to wav audio files"
authors = [{name = "Example Author", email = "author@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["audio", "cli", "wav"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
wavvault = "wavvault.cli:main"
